--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.4",
+    "@types/node": "^20.5.6",
+    "@types/react": "^18.2.21",
+    "@types/react-dom": "^18.2.7",
     "antd": "^5.8.3",
     "gh-pages": "^6.0.0",
     "i18next": "^23.4.4",
@@ -15,6 +19,7 @@
     "react-i18next": "^13.1.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "typescript": "^5.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,6 +50,6 @@
   },
   "devDependencies": {
     "shx": "^0.3.4",
-    "typescript": "^5.2.2"
+    "typescript": "^4.9.5"
   }
 }
